Fix SonarCloud issues: remove wildcard types, use Math.clamp
- AiController: replace ResponseEntity<?> with specific types,
  return 503 with empty body instead of custom ErrorResponse (S1452)
- PricePredictionService: use Math.clamp instead of nested
  Math.max/Math.min (S6885)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>